--- a/index.css
+++ b/index.css
@@ -7,6 +7,12 @@
 body{
     background-color: black;
 }
+@media (max-width: 600px) {
+    /* Reduce the font size for smaller screens */
+    p {
+        font-size: 14px;
+    }
+}
 .banner{
     width: 100%;
     height: 100vh;
